--- a/it/packages.html
+++ b/it/packages.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
 	<title>Pacchetti &mdash; Matteo Salonia</title>
 
@@ -13,7 +13,7 @@
 	<meta property="twitter:description"	content="I pacchetti di Matteo Salonia per Gentoo Linux.">
 	<meta property="og:title"				content="Pacchetti &mdash; Matteo Salonia">
 	<meta property="twitter:title"			content="Pacchetti &mdash; Matteo Salonia">
-	<meta property="og:url"					content="https://salonia.it/it/index.html">
+	<meta property="og:url"					content="https://salonia.it/it/packages.html">
 	<meta property="og:image"				content="https://salonia.it/favicon.png">
 	<meta property="twitter:image"			content="https://salonia.it/favicon.png">
 
@@ -21,7 +21,7 @@
 	<link rel="shortcut icon" href="../favicon.png">
 
 	<!-- CSS & Fonts -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cirrus-ui/dist/cirrus.min.css">
+	<link rel="stylesheet" href="../css/cirrus.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:600">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
 </head>
@@ -59,7 +59,7 @@
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
-									<a href="https://salonia.it/Arch" class="font-bold text-link-dark text-md u u-LR">
+									<a href="https://github.com/saloniamatteo/librsvg-overlay" class="font-bold text-link-dark text-md u u-LR">
 										Librsvg
 									</a>
 								</p>
