--- a/it/software.html
+++ b/it/software.html
@@ -13,7 +13,7 @@
 	<meta property="twitter:description"	content="I programmi di Matteo Salonia.">
 	<meta property="og:title"				content="Programmi &mdash; Matteo Salonia">
 	<meta property="twitter:title"			content="Programmi &mdash; Matteo Salonia">
-	<meta property="og:url"					content="https://salonia.it/it/index.html">
+	<meta property="og:url"					content="https://salonia.it/it/software.html">
 	<meta property="og:image"				content="https://salonia.it/favicon.png">
 	<meta property="twitter:image"			content="https://salonia.it/favicon.png">
 
@@ -21,7 +21,7 @@
 	<link rel="shortcut icon" href="../favicon.png">
 
 	<!-- CSS & Fonts -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cirrus-ui/dist/cirrus.min.css">
+	<link rel="stylesheet" href="../css/cirrus.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:600">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700">
 </head>
