--- a/it/index.html
+++ b/it/index.html
@@ -21,7 +21,7 @@
 	<link rel="shortcut icon" href="../favicon.png">
 
 	<!-- CSS & Fonts -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cirrus-ui/dist/cirrus.min.css">
+	<link rel="stylesheet" href="../css/cirrus.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:600">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700">
 </head>
