Improve contrast in index.html, {it/css}/* (new redesigns)

--- a/it/packages.html
+++ b/it/packages.html
@@ -78,13 +78,13 @@
 	</div>
 
 	<!-- Footer -->
-	<footer class="footer bg-blue-500 px-4 pb-4 u-shadow-inset">
-		<h5 class="title text-black">Matteo Salonia</h5>
+	<footer class="footer bg-blue-700 px-4 pb-4 u-shadow-inset">
+		<h5 class="title text-white">Matteo Salonia</h5>
 
-		<a class="font-bold text-black p-2" href="https://salonia.it/it/">IT</a>
-		<a class="font-bold text-black p-2" href="https://salonia.it/en/">EN</a>
+		<a class="font-bold text-white p-2" href="https://salonia.it/it/">IT</a>
+		<a class="font-bold text-white p-2" href="https://salonia.it/en/">EN</a>
 
-		<p class="text-black mt-4 mb-0">&copy; 2023</p>
+		<p class="text-white mt-4 mb-0">&copy; 2023</p>
 	</footer>
 </body>
 </html>
