--- a/en/software.html
+++ b/en/software.html
@@ -22,8 +22,8 @@
 
 	<!-- CSS & Fonts -->
 	<link rel="stylesheet" href="../css/cirrus.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:600">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700">
+	<link rel="stylesheet" href="../css/fonts/nunito-sans.css">
+	<link rel="stylesheet" href="../css/fonts/montserrat.css">
 </head>
 
 <body>
