--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<!-- CSS & Fonts -->
 	<link rel="stylesheet" href="css/cirrus.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700">
+	<link rel="stylesheet" href="css/fonts/montserrat.css">
 </head>
 
 <body>
