--- a/it/contact.html
+++ b/it/contact.html
@@ -1,113 +1,128 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-	<title>Contatti - Salonia Matteo</title>
+	<title>Contatti &mdash; Matteo Salonia</title>
 
-	<!-- Optimize page loading on some devices -->
+	<!-- Optimize page loading -->
 	<meta charset="utf-8">
-	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Contatta Salonia Matteo.">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Social media preview -->
-	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://salonia.it/it/contact.html">
-	<meta property="og:description"	content="Contatta Salonia Matteo">
-	<meta property="og:image"	content="https://salonia.it/favicon.png">
+	<!-- SEO -->
+	<meta name="description"				content="Contatta Matteo Salonia.">
+	<meta property="og:description"			content="Contatta Matteo Salonia.">
+	<meta property="twitter:description"	content="Contatta Matteo Salonia.">
+	<meta property="og:title"				content="Contatti &mdash; Matteo Salonia">
+	<meta property="twitter:title"			content="Contatti &mdash; Matteo Salonia">
+	<meta property="og:url"					content="https://salonia.it/it/contact.html">
+	<meta property="og:image"				content="https://salonia.it/favicon.png">
+	<meta property="twitter:image"			content="https://salonia.it/favicon.png">
 
-	<!-- Twitter-specific -->
-	<meta property="twitter:title"		content="Salonia Matteo">
-	<meta property="twitter:card"		content="summary_large_image">
-	<meta property="twitter:description"	content="Contatta Salonia Matteo">
-	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
-
-	<!--Favicon-->
+	<!-- Favicon -->
 	<link rel="shortcut icon" href="../favicon.png">
 
-	<!-- Beer CSS -->
-	<link rel="stylesheet" href="../css/beer.min.css">
-	<script src="../js/beer.min.js" type="text/javascript"></script>
-	<script src="../js/light.js" type="text/javascript"></script>
-
-	<!-- Montserrat font -->
-	<link rel="stylesheet" href="../css/montserrat.css">
-
-	<!-- CSS overrides -->
-	<link rel="stylesheet" href="../css/style.css">
-
-	<script>
-	document.onreadystatechange = () => remember_prefs();
-	</script>
+	<!-- CSS & Fonts -->
+	<link rel="stylesheet" href="../css/cirrus.min.css">
+	<link rel="stylesheet" href="../css/fonts/nunito-sans.css">
+	<link rel="stylesheet" href="../css/fonts/montserrat.css">
 </head>
 
-<body class="light">
+<body>
 	<!-- Header -->
-	<header class="fixed small-padding indigo white-text">
-		<div class="grid middle-align">
-			<div class="s2">
-				<a class="button circle white indigo-text" href="index.html">
-					<i>arrow_backward</i>
-				</a>
-			</div>
-
-			<div class="s6 center-align">
-				<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">
-					<p class="large-text">Salonia Matteo</p>
-				</a>
-			</div>
-
-			<div class="s4 right-align">
-				<img class="responsive" src="../pics/logo_rec.png" style="max-width: 100px!important" alt="Logo Matteo Salonia">
+	<div class="header header-fixed unselectable">
+		<div class="header-brand">
+			<div class="nav-item no-hover">
+				<h6 class="title">
+					<a class="text-dark u u-LR" href="index.html">
+						Matteo Salonia
+					</a>
+				</h6>
 			</div>
 		</div>
-	</header>
-
-	<!-- FAB -->
-	<button class="fixed bottom right square round extra large-margin" style="z-index: 10" onclick="toggle_light()">
-		<i class="fill">light_mode</i>
-	</button>
-
-	<div class="margin">
-	<div>
-		<h5>Contatti (Lista recapiti)</h5>
-
-		<p class="large-text">
-		In questa pagina sono elencati alcuni modi per contattarmi in modo privato, tramite email. Vi chiedo di specificare il vostro motivo di contatto nel titolo della mail. Siete benvenuti a cifrare il contenuto dell'email con
-		<a class="button round small no-margin" href="https://it.wikipedia.org/wiki/GNU_Privacy_Guard">GPG&nbsp;<i>arrow_forward</i></a>, usando la chiave relativa all'email che userete per contattarmi.
-		</p>
 	</div>
 
-	<div class="small-space"></div>
+	<!-- Packages -->
+	<div class="hero u-text-center u-shadow-inset pt-8">
+		<div class="hero-body m-2-sm">
+			<div class="content w-90p w-80p-md">
+			<h2 class="headline-4 text-gray-900">Contattami</h2>
+				<p class="lead">
+					Scopri come contattarmi.
+				</p>
 
-	<!-- Email -->
-	<div>
-	<article class="indigo no-padding">
-		<h5 id="email" class="left-align medium-padding indigo white-text">
-			<a href="#email">
-			Email
-			</a>
-		</h5>
-	</article>
+				<div class="content u-text-left w-90p-md">
+				<div class="card">
+					<div class="m-3">
+						<!-- Protonmail -->
+						<div class="tile level">
+							<div class="tile__icon">
+								<p class="u-text-center w-6" style="font-size: 2rem!important">📧</p>
+							</div>
+							<div class="tile__container">
+								<p class="tile__title">
+									<a href="mailto:saloniamatteo@pm.me" class="font-bold text-link-dark text-md u u-LR">
+										Protonmail: saloniamatteo@pm.me
+									</a>
+								</p>
+								<p class="tile__subtitle text-black">
+									Contattami tramite protonmail &mdash;
+									<a href="../matteo-pm.asc" class="font-bold text-link-dark text-md u u-LR">chiave GPG</a>
+								</p>
+							</div>
+						</div>
 
-	<!-- Server Personale -->
-	<article>
-		<h6>Server Personale</h6>
-		<p><i>mail</i> <a href="mailto:matteo@salonia.it"><b>matteo@salonia.it</b></a></p>
+						<div class="divider"></div>
 
-		<nav>
-			<a class="button round" href="../matteo.asc"><i>vpn_key</i>Chiave GPG <i>arrow_forward</i></a>
-		</nav>
-	</article>
+						<!-- Personal server -->
+						<div class="tile level">
+							<div class="tile__icon">
+								<p class="u-text-center w-6" style="font-size: 2rem!important">📧</p>
+							</div>
+							<div class="tile__container">
+								<p class="tile__title">
+									<a href="mailto:matteo@salonia.it" class="font-bold text-link-dark text-md u u-LR">
+										Server personale: matteo@salonia.it
+									</a>
+								</p>
+								<p class="tile__subtitle text-black">
+									Contattami tramite il mio server e-mail &mdash;
+									<a href="../matteo.asc" class="font-bold text-link-dark text-md u u-LR">chiave GPG</a>
+								</p>
+							</div>
+						</div>
 
-	<!-- Protonmail -->
-	<article>
-		<h6>Protonmail</h6>
-		<p><i>mail</i> <a href="mailto:saloniamatteo@pm.me"><b>saloniamatteo@pm.me</b></a></p>
+						<div class="divider"></div>
 
-		<nav>
-			<a class="button round" href="../matteo-pm.asc"><i>vpn_key</i>Chiave GPG <i>arrow_forward</i></a>
-		</nav>
-	</article>
+						<!-- Disclaimer -->
+						<div class="tile level">
+							<div class="tile__container">
+								<p class="tile__title">
+									Non è possibile contattarmi tramite social (Instagram, Facebook, Twitter, Reddit, ecc.),
+									dato che ho eliminato i miei account da queste piattaforme.
+									L'unico modo per contattarmi è tramite e-mail &mdash;
+									siete pregati di criptare il contenuto dell'e-mail con GPG:
+									le chiavi di ogni indirizzo sono contenute in questa pagina.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				</div>
+
+				<div class="mt-8">
+					<a href="index.html">&larr; Torna alla pagina principale</a>
+				</div>
+			</div>
+		</div>
 	</div>
-	</div>
+
+	<!-- Footer -->
+	<footer class="footer bg-blue-700 px-4 pb-4 u-shadow-inset">
+		<h5 class="title text-white">Matteo Salonia</h5>
+
+		<a class="font-bold text-white p-2" href="https://salonia.it/it/">IT</a>
+		<a class="font-bold text-white p-2" href="https://salonia.it/en/">EN</a>
+
+		<p class="text-white mt-4 mb-0">&copy; 2023</p>
+	</footer>
 </body>
 </html>
