--- a/it/info.html
+++ b/it/info.html
@@ -68,25 +68,37 @@
 				<div class="grid-c-8 mr-4-lg">
 					<p>
 						Sono un ragazzo Italiano originario della Sicilia, provincia di Ragusa.
-						Attualmente frequento la Ragioneria "<strong>Archimede</strong>" di Modica,
-						dove frequento il corso di programmatore, denominato <strong>SIA</strong> (<em>Sistemi Informativi Aziendali </em>).
-						Sono abile in varie materie, tra cui:
+						Mi sono <strong>diplomato</strong> in data <strong>29/06/2023</strong> con un
+						punteggio di <strong>98/100</strong> presso la Ragioneria "<strong>Archimede</strong>" di Modica,
+						dove ho frequentato il corso di programmatore, denominato <strong>SIA</strong> (<em>Sistemi Informativi Aziendali </em>).
+						<br>
+						Sono specializzato in:
 					</p>
 
 					<ul>
-						<li>Informatica (<strong>HTML+CSS+JS</strong>, <strong>PHP</strong>, <strong>C</strong>, <strong>Visual Basic .NET</strong>, <strong>SQL</strong>)</li>
-						<li>Inglese (<strong>Speaking</strong>, <strong>Listening</strong>, <strong>Writing</strong>)</li>
-						<li>Economia Aziendale (<strong>Bilancio</strong>, <strong>Budget</strong>, <strong>Analisi dei costi</strong>)</li>
-						<li>Matematica (<strong>Algebra</strong>, <strong>Analisi Matematica</strong>, <strong>Matematica Finanziaria</strong>)</li>
+						<li>
+							<strong><u>Informatica ed Elettronica</u></strong>: Sviluppo programmi (<strong>C</strong>, <strong>VB.NET</strong>),
+							sviluppo siti web (<strong>HTML+CSS+JS+PHP+SQL</strong>), gestione e manutenzione sistemi <strong>GNU/Linux</strong>,
+							assemblaggio e manutenzione <strong>workstation</strong>, installazione e manutenzione <strong>reti LAN</strong>,
+							installazione <strong>impianti di videosorveglianza</strong>.
+						</li>
+						<li>
+							<strong><u>Inglese</u></strong>: Fluente in <strong>Speaking</strong>, <strong>Listening</strong>, <strong>Writing</strong>.
+						</li>
+						<li>
+							<strong><u>Economia Aziendale</u></strong>: Redazione <strong>Bilancio</strong>, <strong>Budget economico-finanziari</strong>,
+							<strong>Analisi dei costi</strong>, <strong>Busta paga</strong>, <strong>Leasing</strong>,
+							<strong>Emissione Azioni ed Obbligazioni</strong>, <strong>Distribuzione Utile d'Esercizio e dividendi</strong>,
+							altre operazioni di <strong>Partita doppia</strong>.
+						</li>
+						<li>
+							<strong><u>Matematica</u></strong>: Abile in <strong>Algebra</strong>, <strong>Analisi Matematica</strong>, <strong>Matematica Finanziaria</strong>.
+						</li>
 					</ul>
 
 					<p>
 						Sono un appassionato di bodybuilding, e non solo: ogni giorno bisogna migliorare, anche di poco,
 						sia mentalmente, sia fisicamente, per poi diventare la versione migliore di se' stessi.
-					</p>
-
-					<p class="font-bold u-text-center">
-						Molti nemici, molto onore &mdash; Memento audere semper &mdash; Deus, Patria, Familia
 					</p>
 				</div>
 
@@ -241,6 +253,10 @@
 
 												<li class="menu-item">
 													Redesign sito web personale
+												</li>
+
+												<li class="menu-item">
+													Diploma di <strong>Ragioniere Perito Informatico</strong>, punteggio <strong>98/100</strong>
 												</li>
 											</ul>
 										</li>
