--- a/en/info.html
+++ b/en/info.html
@@ -67,26 +67,39 @@
 
 				<div class="grid-c-8 mr-4-lg">
 					<p>
-						I'm an Italian teen originally from Sicily, from the province of Ragusa.
-						Currently I attend the "<strong>Archimede</strong>" Accounting School in Modica,
-						where I attend the programmer course, in short <strong>SIA</strong> (<em>Sistemi Informativi Aziendali</em>, <em>Corporate Information Systems </em>).
-						I am proficient in various subjects, such as:
+						I'm an Italian man originally from Sicily, from the province of Ragusa.
+						I <strong>graduated</strong> on <strong>06/29/2023</strong>
+						with a score of <strong>98/100</strong> at the "<strong>Archimede</strong>" Accounting School in Modica,
+						where I attended the programmer course, abbreviated <strong>SIA</strong>
+						(<em>Sistemi Informativi Aziendali</em>, <em>Corporate Information Systems </em>).
+						<br>
+						I am specialised in:
+
 					</p>
 
 					<ul>
-						<li><abbr title="Information Technology">IT</abbr> (<strong>HTML+CSS+JS</strong>, <strong>PHP</strong>, <strong>C</strong>, <strong>Visual Basic .NET</strong>, <strong>SQL</strong>)</li>
-						<li>English (<strong>Speaking</strong>, <strong>Listening</strong>, <strong>Writing</strong>)</li>
-						<li>Business Economics (<strong>Economic Balance Sheet</strong>, <strong>Budget</strong>, <strong>Cost analysis</strong>)</li>
-						<li>Mathematics (<strong>Algebra</strong>, <strong>Mathematical Analysis</strong>, <strong>Financial Mathematics</strong>)</li>
+						<li>
+							<strong><u><abbr title="Information Technology">IT</abbr> and Electronics</u></strong>:
+							Software development (<strong>C</strong>, <strong>VB.NET</strong>),
+							website development (<strong>HTML+CSS+JS+PHP+SQL</strong>), <strong>GNU/Linux</strong> system management and maintenance,
+							<strong>workstation</strong> assembly and management, <strong>LAN networks</strong> installation and maintenance,
+							<strong>video surveillance systems</strong> installation.
+						<li>
+							<strong><u>English</u></strong>: Fluent in <strong>Speaking</strong>, <strong>Listening</strong>, <strong>Writing</strong>.
+						</li>
+						<li>
+							<strong><u>Business Economics</u></strong>: Preparation of the <strong>Economic Balance Sheet</strong>,
+							<strong>Economic-Financial Budgets</strong>, <strong>Cost analysis</strong>, <strong>Employee paycheck</strong>,
+							<strong>Leasing</strong>, <strong>Issue of Shares and Bonds</strong>, <strong>Distribution of Operating Profits and dividends</strong>.
+						</li>
+						<li>
+							<strong><u>Mathematics</u></strong>: Proficient in <strong>Algebra</strong>, <strong>Mathematical Analysis</strong>, <strong>Financial Mathematics</strong>.
+						</li>
 					</ul>
 
 					<p>
 						I'm passionate about bodybuilding, and more: every day you must become better, even slightly,
 						both mentally, and physically, to then become the best version of yourself.
-					</p>
-
-					<p class="font-bold u-text-center">
-						Molti nemici, molto onore &mdash; Memento audere semper &mdash; Deus, Patria, Familia
 					</p>
 				</div>
 
@@ -241,6 +254,14 @@
 
 												<li class="menu-item">
 													Personal website redesign
+												</li>
+
+												<li class="menu-item">
+													Personal website redesign
+												</li>
+
+												<li class="menu-item">
+													<strong>Computer Expert Accountant</strong> degree (<strong>Ragioniere Perito Informatico</strong>), score of <strong>98/100</strong>
 												</li>
 											</ul>
 										</li>
