Update cirrus, add header logo

--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
 	<!-- Header -->
 	<div class="header header-fixed unselectable">
 		<div class="header-brand">
-			<div class="nav-item no-hover">
-				<h6 class="title">
-					<a class="text-dark u u-LR" href="https://salonia.it">
-						Matteo Salonia
-					</a>
-				</h6>
+			<div class="mt-2 mb-2">
+				<a href="https://salonia.it">
+					<img src="pics/salonia.png">
+				</a>
 			</div>
 		</div>
 	</div>
