--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
 	<!-- Header -->
 	<div class="header header-fixed unselectable">
 		<div class="header-brand">
-			<div class="mt-2 mb-2">
-				<a href="https://salonia.it">
-					<img src="pics/salonia.png">
-				</a>
-			</div>
+			<a href="https://salonia.it">
+				<img class="w-24" src="pics/salonia.png">
+			</a>
 		</div>
 	</div>
 
