--- a/it/software.html
+++ b/it/software.html
@@ -30,13 +30,9 @@
 	<!-- Header -->
 	<div class="header header-fixed unselectable">
 		<div class="header-brand">
-			<div class="nav-item no-hover">
-				<h6 class="title">
-					<a class="text-dark u u-LR" href="index.html">
-						Matteo Salonia
-					</a>
-				</h6>
-			</div>
+			<a href="https://salonia.it">
+				<img class="w-24" src="../pics/salonia.png">
+			</a>
 		</div>
 	</div>
 
@@ -149,13 +145,13 @@
 	</div>
 
 	<!-- Footer -->
-	<footer class="footer bg-blue-700 px-4 pb-4 u-shadow-inset">
-		<h5 class="title text-white">Matteo Salonia</h5>
+	<footer class="footer bg-blue-700 px-4 pt-6 pb-4 u-shadow-inset">
+		<h5 class="title text-white pt-2">Matteo Salonia</h5>
 
-		<a class="font-bold text-white p-2" href="https://salonia.it/it/">IT</a>
-		<a class="font-bold text-white p-2" href="https://salonia.it/en/">EN</a>
+		<a class="font-bold text-blue-700 p-2 tag" href="https://salonia.it/it/">IT</a>
+		<a class="font-bold text-blue-700 p-2 tag" href="https://salonia.it/en/">EN</a>
 
-		<p class="text-white mt-4 mb-0">&copy; 2023</p>
+		<p class="text-white mt-4 mb-0">&copy; 2022-2024</p>
 	</footer>
 </body>
 </html>
