--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 	<!-- Header -->
 	<div class="header header-fixed unselectable">
-		<div class="header-brand">
+		<div class="header-brand u-center">
 			<a href="https://salonia.it">
 				<img class="w-24" src="pics/salonia.png">
 			</a>
