Fix missing '.sh'

--- a/en/kernel.html
+++ b/en/kernel.html
@@ -405,7 +405,7 @@ cd /usr/src/usr-kernel</code></pre>
 							After making sure we have everything that's necessary, 
 							we can proceed with compiling the Kernel with the following command, executing it as root:
 
-							<pre class="mb-2"><code>./build -f -l -o -p</code></pre>
+							<pre class="mb-2"><code>./build.sh -f -l -o -p</code></pre>
 
 							Note the repeated presence of the patch options (<code>-l</code>, <code>-o</code>, <code>-p</code>).
 							This is because the script automatically reverts all changes made by the patches present
