--- a/it/kernel.html
+++ b/it/kernel.html
@@ -410,7 +410,7 @@ cd /usr/src/usr-kernel</code></pre>
 							Dopo essere sicuri di avere tutto il necessario,
 							è possibile compilare il Kernel con il seguente comando, eseguendolo come utente root:
 
-							<pre class="mb-2"><code>./build -f -l -o -p</code></pre>
+							<pre class="mb-2"><code>./build.sh -f -l -o -p</code></pre>
 
 							Notate la presenza ripetuta delle opzioni di patch (<code>-l</code>, <code>-o</code>, <code>-p</code>).
 							Questo perchè lo script, in automatico, ripristina tutti i cambiamenti effettuati dalle patch presenti
