--- a/it/software.html
+++ b/it/software.html
@@ -30,7 +30,7 @@
 	<div class="header header-fixed unselectable">
 		<div class="header-brand u-center">
 			<a href="https://salonia.it">
-				<img class="w-24" src="../pics/salonia.png">
+				<img class="w-24" src="../pics/salonia.png" alt="Logo">
 			</a>
 		</div>
 	</div>
