Use new fonts.css file, fix card display

--- a/it/index.html
+++ b/it/index.html
@@ -22,7 +22,7 @@
 
 	<!-- CSS & Fonts -->
 	<link rel="stylesheet" href="../css/cirrus.min.css">
-	<link rel="stylesheet" href="../css/fonts/montserrat.css">
+	<link rel="stylesheet" href="../css/fonts/fonts.css">
 </head>
 
 <body>
@@ -50,8 +50,8 @@
 
 	<!-- Linux & Software -->
 	<div class="hero u-text-center u-shadow-inset" id="linux-soft">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4"><a class="text-gray-900" href="#linux-soft">Linux e Software</a></h2>
 				<p class="lead">
 					Scopri la guida che ti aiuta ad installare Arch Linux, le mie configurazioni (i miei dotfiles),
