--- a/it/info.html
+++ b/it/info.html
@@ -22,7 +22,7 @@
 
 	<!-- CSS & Fonts -->
 	<link rel="stylesheet" href="../css/cirrus.min.css">
-	<link rel="stylesheet" href="../css/fonts/montserrat.css">
+	<link rel="stylesheet" href="../css/fonts/fonts.css">
 </head>
 
 <body>
@@ -36,9 +36,9 @@
 	</div>
 
 	<!-- Info -->
-	<div class="hero u-text-center u-shadow-inset pt-8">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+	<div class="hero u-text-center u-shadow-inset pt-3">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4"><a class="text-gray-900">Informazioni</a></h2>
 				<p class="lead">
 					Scopri chi sono, le mie competenze, e le mie conoscenze.
