--- a/it/kernel.html
+++ b/it/kernel.html
@@ -22,7 +22,7 @@
 
 	<!-- CSS & Fonts -->
 	<link rel="stylesheet" href="../css/cirrus.min.css">
-	<link rel="stylesheet" href="../css/fonts/montserrat.css">
+	<link rel="stylesheet" href="../css/fonts/fonts.css">
 </head>
 
 <body>
@@ -36,9 +36,9 @@
 	</div>
 
 	<!-- Kernel -->
-	<div class="hero u-text-center u-shadow-inset pt-8">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+	<div class="hero u-text-center u-shadow-inset pt-3">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4 text-gray-900">Kernel</h2>
 				<p class="lead">
 					In questa pagina sono contenuti tutti i dettagli per usare al meglio il mio
@@ -288,7 +288,7 @@ cd /usr/src/usr-kernel</code></pre>
 											<th class="u-align-middle">Descrizione</th>
 										</tr>
 									</thead>
-									
+
 									<tbody>
 										<tr>
 											<td>-b</td>
@@ -477,7 +477,7 @@ cd /usr/src/usr-kernel</code></pre>
 
 							<p>
 							Per avviare il Kernel è necessario un initramfs. Per generarlo, userò dracut.
-							
+
 							Prima di tutto, accertatevi di aver configurato dracut.
 							Ad esempio, ecco il mio <code>/etc/dracut.conf</code>:
 
