--- a/en/kernel.html
+++ b/en/kernel.html
@@ -22,7 +22,7 @@
 
 	<!-- CSS & Fonts -->
 	<link rel="stylesheet" href="../css/cirrus.min.css">
-	<link rel="stylesheet" href="../css/fonts/montserrat.css">
+	<link rel="stylesheet" href="../css/fonts/fonts.css">
 </head>
 
 <body>
