Fix cards display

--- a/en/index.html
+++ b/en/index.html
@@ -50,8 +50,8 @@
 
 	<!-- Linux & Software -->
 	<div class="hero u-text-center u-shadow-inset" id="linux-soft">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4"><a class="text-gray-900" href="#linux-soft">Linux &amp; Software</a></h2>
 				<p class="lead">
 					Discover the guide that helps you to install Arch Linux, my configurations (my dotfiles),
