--- a/en/info.html
+++ b/en/info.html
@@ -36,9 +36,9 @@
 	</div>
 
 	<!-- Info -->
-	<div class="hero u-text-center u-shadow-inset pt-8">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+	<div class="hero u-text-center u-shadow-inset pt-3">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4"><a class="text-gray-900">Info</a></h2>
 				<p class="lead">
 					Discover who I am, my skills, and my knowledge.
