--- a/en/kernel.html
+++ b/en/kernel.html
@@ -36,9 +36,9 @@
 	</div>
 
 	<!-- Kernel -->
-	<div class="hero u-text-center u-shadow-inset pt-8">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+	<div class="hero u-text-center u-shadow-inset pt-3">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4 text-gray-900">Kernel</h2>
 				<p class="lead">
 					This page contains all the details necessary to use my script
@@ -284,7 +284,7 @@ cd /usr/src/usr-kernel</code></pre>
 											<th class="u-align-middle">Description</th>
 										</tr>
 									</thead>
-									
+
 									<tbody>
 										<tr>
 											<td>-b</td>
@@ -401,7 +401,7 @@ cd /usr/src/usr-kernel</code></pre>
 							</h4>
 
 							<p>
-							After making sure we have everything that's necessary, 
+							After making sure we have everything that's necessary,
 							we can proceed with compiling the Kernel with the following command, executing it as root:
 
 							<pre class="mb-2"><code>./build.sh -f -l -o -p</code></pre>
