--- a/en/software.html
+++ b/en/software.html
@@ -36,9 +36,9 @@
 	</div>
 
 	<!-- Software -->
-	<div class="hero u-text-center u-shadow-inset pt-8">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+	<div class="hero u-text-center u-shadow-inset pt-3">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4 text-gray-900">Software</h2>
 				<p class="lead">
 					Discover all of the programs I developed in C (C99).
