--- a/en/contact.html
+++ b/en/contact.html
@@ -36,9 +36,9 @@
 	</div>
 
 	<!-- Packages -->
-	<div class="hero u-text-center u-shadow-inset pt-8">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+	<div class="hero u-text-center u-shadow-inset pt-3">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4 text-gray-900">Contact me</h2>
 				<p class="lead">
 					Discover how to contact me.
