Fix cards display

--- a/en/index.html
+++ b/en/index.html
@@ -153,8 +153,8 @@
 
 	<!-- About me -->
 	<div class="hero u-text-center bg-blue-200 u-shadow-inset" id="about">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4"><a class="text-gray-900" href="#about">About me</a></h2>
 				<p class="lead">
 					Discover who I am, my skills, my contact details, and how you can help me.
@@ -220,8 +220,8 @@
 
 	<!-- Tools & Links -->
 	<div class="hero u-text-center u-shadow-inset" id="tools-links">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4"><a class="text-gray-900" href="#tools-links">Tools & Links</a></h1>
 				<p class="lead">
 					Discover useful tools and links, such as SearXNG, the OpenAlias portal, and my GitHub profile.
