--- a/it/index.html
+++ b/it/index.html
@@ -154,8 +154,8 @@
 
 	<!-- About me -->
 	<div class="hero u-text-center bg-blue-200 u-shadow-inset" id="about">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4"><a class="text-gray-900" href="#about">Su di me</a></h2>
 				<p class="lead">
 					Scopri chi sono, le mie competenze, i miei recapiti, come puoi aiutarmi.
@@ -221,8 +221,8 @@
 
 	<!-- Tools & Links -->
 	<div class="hero u-text-center u-shadow-inset" id="tools-links">
-		<div class="hero-body m-2-sm">
-			<div class="content w-90p w-80p-md">
+		<div class="hero-body">
+			<div class="content w-90p">
 			<h2 class="headline-4"><a class="text-gray-900" href="#tools-links">Strumenti e Link</a></h1>
 				<p class="lead">
 					Scopri strumenti e link utili, tra cui SearXNG, il portale OpenAlias, ed il mio profilo GitHub.
